Alterando para pegar o indice 0 da lista pois o getFisrt só tem no LinkedList