@@ -83,7 +83,7 @@ public interface ExpenseMapper {
             return null;
         }
         return InstallmentDetailResponse.builder()
-                .value(source.getInstallments().getFirst().getValue())
+                .value(source.getInstallments().get(0).getValue())
                 .amountPaid(source.getPaidInstallmentsCount())
                 .amountUnpaid(source.getUnpaidInstallmentsCount())
                 .totalPaid(source.getTotalPaidAmount())
